# yazol

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  setupHooks.sh
CMake/Modules/: FindGtest.cmake  create_source_group.cmake
scripts/format/: formatAllCpp.sh  fromCache.sh
scripts/githooks/pre-commit-script/: format-cpp.sh  pre-commit
yazol/: CMakeLists.txt
yazol/cpp/: YazolContext.cpp
yazol/cpp/Logger/: Logger.cpp
yazol/cpp/Utilities/Chrono/: Timer.cpp
yazol/cpp/Utilities/IO/FileMap/: FileMap.cpp  FileMapLinux.cpp  FileMapWindows.cpp
yazol/cpp/Utilities/IO/Mutex/: FileMapMutex.cpp
yazol/cpp/Utilities/Memory/: MemoryAllocator.cpp
yazol/cpp/Utilities/Memory/Circlebuffer/: ArbitrarySizeCirclebuffer.cpp
yazol/cpp/Utilities/Memory/Stack/: StackAllocator.cpp
yazol/cpp/Utilities/String/: VA_ListToString.cpp
yazol/hpp/: SubmoduleManager.hpp  YazolContext.hpp
yazol/hpp/Console/: Console.hpp  ConsoleColor.hpp  ConsoleManager.hpp
yazol/hpp/Logger/: Logger.hpp
yazol/hpp/Utilities/Chrono/: Timer.hpp
yazol/hpp/Utilities/Console/: ConsoleColor.hpp
yazol/hpp/Utilities/Constants/: LoggerConstants.hpp
yazol/hpp/Utilities/IO/FileMap/: FileMap.hpp  FileMapMutex.hpp
yazol/hpp/Utilities/IO/Mutex/: Mutex.hpp
yazol/hpp/Utilities/Logging/: HelpFunctions.hpp  LogLevel.hpp  LogLevelConverter.hpp  LogLevelInfo.hpp  LogTag.hpp  LogTagConverter.hpp  LogTagInfo.hpp  LogTextData.hpp
yazol/hpp/Utilities/Memory/: AllocationHeaderBuilder.hpp  MemoryAllocator.hpp  MemorySpecification.hpp
yazol/hpp/Utilities/Memory/Circlebuffer/: ArbitrarySizeCirclebuffer.hpp  ArbitraryStaticData.hpp  CircleBufferHeader.hpp  CircleBufferType.hpp  Circlebuffer.hpp  StaticData.hpp
yazol/hpp/Utilities/Memory/Pool/: FixedSizePoolAllocator.hpp
yazol/hpp/Utilities/Memory/Stack/: MemoryMarker.hpp  StackAllocator.hpp
yazol/hpp/Utilities/PointerArithmetic/: PointerArithmetic.hpp
yazol/hpp/Utilities/String/: StringHelper.hpp  VA_ListToString.hpp
yazol_impl/: CMakeLists.txt
yazol_impl/cpp/: LoggingModule.cpp  SubmoduleManager.cpp
yazol_impl/cpp/Console/: Console.cpp  ConsoleManager.cpp
yazol_impl/cpp/Logger/: Logger.cpp
yazol_impl/hpp/: LoggingModule.hpp  SubmoduleManager.hpp
yazol_impl/hpp/Console/: Console.hpp  ConsoleManager.hpp
yazol_impl/hpp/Logger/: LoggerImpl.hpp
yazol_test/: CMakeLists.txt
yazol_test/cpp/Utilities/IO/FileMap/: FileMapTest.cpp
yazol_test/cpp/Utilities/Memory/: FixedSizePoolAllocatorTest.cpp  StackAllocatorTest.cpp
yazol_test/cpp/Utilities/Memory/CircleBuffer/: ArbitrarySizeCirclebufferTest.cpp  CircleBufferTest.cpp
yazol_test/hpp/Utilities/IO/FileMap/: FileMapTest.hpp
yazol_test/hpp/Utilities/Memory/: FixedSizePoolAllocatorTest.hpp  StackAllocatorTest.hpp
yazol_test/hpp/Utilities/Memory/CircleBuffer/: ArbitrarySizeCirclebufferTest.hpp  CircleBufferTest.hpp
